--- a/style.css
+++ b/style.css
@@ -48,3 +48,38 @@
   vertical-align: middle;
   margin-right: 0.5em;
 }
+
+.icon {
+  width: 1rem;
+  height: auto;
+  vertical-align: middle;
+}
+
+.pagination {
+  display: flex;
+  visibility: visible;
+  position: relative;
+  margin: 2rem auto;
+  text-align: center;
+  z-index: 1;
+}
+
+.page-numbers {
+  display: inline-block;
+  margin: 0 0.25rem;
+  padding: 0.5rem 0.75rem;
+  text-decoration: none;
+  background-color: #f5f5f5;
+  color: #333;
+}
+
+.page-numbers:hover {
+  background-color: #0073aa !important;
+  color: #fff;
+}
+
+.page-numbers.current {
+  background-color: #0073aa !important;
+  color: #fff;
+  font-weight: bold;
+}
